add some files and styles

--- a/weekend.html
+++ b/weekend.html
@@ -7,8 +7,8 @@
     <title>To Do list</title>
 </head>
 <body>
-    <h1>It's a weekend!</h1>
-    <p>Let's go to rest!!!!!!!!!!!!1</p>
+    <!-- <h1>It's a weekend!</h1>
+    <p>Let's go to rest!!!!!!!!!!!!1</p> -->
 <!-- <script src="app.js"></script> -->
 </body>
 </html>
