--- a/index.html
+++ b/index.html
@@ -7,18 +7,7 @@
     <title>To Do list</title>
 </head>
 <body>
-    <h1>It's a weekday!</h1>
-    <p>Why are you not working????</p>
-    <h1>It's a weekday!</h1>
-    <p>Why are you not working????</p>
-    <h1>It's a weekday!</h1>
-    <p>Why are you not working????</p>
-    <h1>It's a weekday!</h1>
-    <p>Why are you not working????</p>
-    <h1>It's a weekday!</h1>
-    <p>Why are you not working????</p>
-    <h1>It's a weekday!</h1>
-    <p>Why are you not working????</p>
+    <!-- <h1>It's a weekday!</h1>  -->
 <!-- <script src="app.js"></script> -->
 </body>
 </html>
